Add progress bar while scraping

--- a/package.json
+++ b/package.json
@@ -2,7 +2,9 @@
   "name": "mcgill-course-scraper",
   "version": "",
   "dependencies": {
+    "chalk": "^2.4.1",
     "cheerio": "^1.0.0-rc.2",
+    "progress": "^2.0.0",
     "request": "^2.85.0"
   }
 }
