--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
     "chalk": "^2.4.1",
     "cheerio": "^1.0.0-rc.2",
     "progress": "^2.0.0",
-    "request": "^2.85.0"
+    "request": "^2.85.0",
+    "yargs": "^11.0.0"
   }
 }
